--- a/UI/Contact/contact.html
+++ b/UI/Contact/contact.html
@@ -409,9 +409,9 @@ END ?>
 		account_class ?>&entity_id=<?lsmb entity_id 
 		?>&meta_number=<?lsmb cl_item.meta_number ?>"><?lsmb cl_item.meta_number ?></a></td>
         <td><?lsmb cl_item.description ?></td>
-        <td><?lsmb cl_item.credit_limit ?></td>
-        <td><?lsmb cl_item.start_date ?></td>
-        <td><?lsmb cl_item.end_date ?></td>
+        <td><?lsmb cl_item.creditlimit ?></td>
+        <td><?lsmb cl_item.startdate ?></td>
+        <td><?lsmb cl_item.enddate ?></td>
     </tr>    
     <?lsmb END ?>
     </table>
@@ -587,6 +587,15 @@ END ?>
 			label = text('Threshold')
 			class = "numeric"
                } ?>
+          <td><?lsmb pricegroups.unshift({});
+                INCLUDE select element_data = {
+                     default_values = [pricegroup_id],
+                               name = 'pricegroup_id'
+                            options = pricegroups
+                              label = text('Pricegroup')
+                         value_attr = 'id'
+                          text_attr = 'pricegroup'
+                } ?></td>
 	</tr>
 
 	<tr id="taxform-threshold-row">
