--- a/UI/Reports/PNL.html
+++ b/UI/Reports/PNL.html
@@ -7,7 +7,7 @@ LINK = LINK.replace('\&amp;\&amp;', '&amp;');
 DRILLBASE = 'journal.pl?sort=transdate&amp;category=X'
        _ '&amp;col_transdate=Y&amp;col_reference=Y&amp;col_description=Y'
        _ '&amp;col_debits=Y&amp;col_credits=Y&amp;col_source=Y'
-       _ '&amp;col_accno=Y&amp;action=search';
+       _ '&amp;col_accno=Y&amp;action=search&amp;col_running_balance=Y';
 
 USE String;
 
