--- a/UI/Reports/PNL.html
+++ b/UI/Reports/PNL.html
@@ -1,4 +1,5 @@
-<?lsmb INCLUDE 'ui-header.html' include_stylesheet = ['UI/Reports/pnl.css'];
+<?lsmb INCLUDE 'ui-header.html'
+               include_stylesheet = ['UI/Reports/pnl.css'];
 account_data = report.account_data;
 
 FORMATS = LIST_FORMATS();
@@ -9,43 +10,94 @@ DRILLBASE = 'journal.pl?sort=transdate&amp;category=X'
        _ '&amp;col_debits=Y&amp;col_credits=Y&amp;col_source=Y'
        _ '&amp;col_accno=Y&amp;action=search&amp;col_running_balance=Y';
 
-USE String;
-
+max_path_depth = 0;
+FOREACH row IN report.sorted_row_ids ;
+   IF max_path_depth < report.rheads.ids.$row.path.size ;
+     max_path_depth = report.rheads.ids.$row.path.size;
+   END;
+END;
+IF report.legacy_hierarchy ;
+   hierarchy = 'flat-hierarchy';
+ELSE ;
+   hierarchy = 'full-hierarchy';
+END ;
 ?>
-<body class="financial-statement <?lsmb dojo_theme ?>">
+<body class="financial-statement <?lsmb dojo_theme ?> <?lsmb hierarchy ?>">
 <h1><?lsmb name ?></h1>
-<h2><?lsmb text('Accounting period: [_1] to [_2]', report.from_date, report.to_date); ?></h2>
-<table class="income_statement">
+<div class="company-name"><?lsmb company_name ?></div>
+<div class="company-address"><?lsmb company_address ?></div>
+
+<table class="income_statement" style="border-collapse: collapse">
+<colgroup class="headings">
+<?lsmb i = 1;
+   WHILE i <= max_path_depth;
+     '  <col class="level' _ i _ '" />';
+     i = i + 1;
+   END;
+?>
+</colgroup>
+<colgroup class="values">
+<?lsmb i = 1;
+   WHILE i <= report.cheads.ids.keys.size;
+     '  <col class="values' _ i _ '" />';
+     i = i + 1;
+   END;
+?>
+</colgroup>
 <tbody>
     <tr class="sectionhead">
-        <th><?lsmb text('Account') ?></th>
+        <th colspan="<?lsmb max_path_depth ?>"></th>
 <?lsmb FOREACH col IN report.cheads.ids.keys -?>
         <th><?lsmb report.cheads.ids.$col.props.description ?></th>
 <?lsmb END -?>
     </tr>
-<?lsmb FOREACH row IN report.sorted_row_ids ?>
-<tr>
-  <th><?lsmb nbsp = String.new("&nbsp;"); nbsp.repeat(report.rheads.ids.$row.path.size); -?>
+<?lsmb FOREACH row IN report.sorted_row_ids ;
+   path_depth = report.rheads.ids.$row.path.size;
+   path_prefix_len = path_depth - 1;
+   path_suffix_len = max_path_depth - path_prefix_len;
+   IF report.rheads.ids.$row.props.account_type == 'H' ;
+     class = 'class="heading' _ path_depth _ '"';
+     clazz = "heading" _ path_depth;
+   ELSIF report.rheads.ids.$row.props.section_for ;
+     class = 'class="section' _ path_depth _ '"';
+     clazz = "section" _ path_depth;
+   ELSE ;
+     class = '';
+     clazz = '';
+   END;
+ ?>
+<tr class="<?lsmb clazz ?>">
+  <?lsmb IF path_prefix_len > 0 ?>
+  <th colspan="<?lsmb path_prefix_len ?>"></th>
+  <?lsmb END ?>
+  <th colspan="<?lsmb path_suffix_len ?>" <?lsmb class ?>>
+<?lsmb IF report.rheads.ids.$row.props.section_for ;
+  head_id = report.rheads.ids.$row.props.section_for;
+  report.rheads.ids.$head_id.props.account_description; ?>
+</th><th colspan="<?lsmb report.cheads.ids.keys.size ?>" <?lsmb class ?>></th>
+<?lsmb ELSE ?>
+
 <?lsmb IF report.rheads.ids.$row.props.account_number && report.incl_accnos; -?>
 <?lsmb report.rheads.ids.$row.props.account_number -?> - <?lsmb
 END; -?><?lsmb report.rheads.ids.$row.props.account_description ?></th>
 <?lsmb FOREACH col IN report.cheads.ids.keys -?>
-  <!-- ###TODO-REPORT-HEADINGS: implement sign conversion A/L/Q*contra -->
-  <!-- ###TODO-REPORT-HEADINGS: add links on the cells to 'drill downs' -->
-  <td class="amount"><a href="<?lsmb
+  <td class="amount <?lsmb clazz ?>"><a href="<?lsmb
  DRILLBASE _ '&amp;accno=' _ report.rheads.ids.$row.props.account_number
            _ '&amp;from_date=' _ report.cheads.ids.$col.props.from_date
            _ '&amp;to_date=' _ report.cheads.ids.$col.props.to_date ?>"><?lsmb report.cells.$row.$col ?></a></td><?lsmb END ?>
-</tr>
 <?lsmb END ?>
-<?lsmb IF FORMATS.grep('PDF').size() ?>
-<tr><td><a target="_blank"
-           href="<?lsmb LINK ?>&amp;format=PDF">[<?lsmb text('PDF') ?>]</a></td>
-<td><a target="_blank"
-       href="<?lsmb LINK ?>&amp;format=CSV">[<?lsmb text('CSV') ?>]</a></td>
+</tr>
 <?lsmb END ?>
 </tbody>
 </table>
+<?lsmb IF FORMATS.grep('PDF').size() ?>
+<div class="export-links">
+<div class="export-link"><a target="_blank"
+           href="<?lsmb LINK ?>&amp;format=PDF">[<?lsmb text('PDF') ?>]</a>
+<div class="export-link"><a target="_blank"
+       href="<?lsmb LINK ?>&amp;format=CSV">[<?lsmb text('CSV') ?>]</a></div>
+</div>
+<?lsmb END ?>
 </body>
 </html>
 
