Imported Upstream version 1.4.33+ds

--- a/UI/timecards/timecard.html
+++ b/UI/timecards/timecard.html
@@ -102,7 +102,7 @@ END; ?>
 <tr><th><?lsmb text('Chargeable') ?></th>
     <td><?lsmb PROCESS input element_data = {
        name = 'qty'
-      value = qty
+      value = defined(qty) ? qty : 0
        type = text
       class = 'qty'
        size = 16 } ?></td>
