--- a/UI/Contact/divs/company.html
+++ b/UI/Contact/divs/company.html
@@ -81,7 +81,7 @@
        <?lsmb country_list.unshift({});
                 company_country_id = company.country_id;
                 IF !company_country_id; 
-                          company_country_id = default_country_id;
+                          company_country_id = default_country;
                 END;
 		INCLUDE select element_data = {
                         id = 'company-country-id'
