--- a/UI/business_units/edit.html
+++ b/UI/business_units/edit.html
@@ -88,6 +88,7 @@ default_blank = 1
 } ?>
 </span>
 </div>
+<?lsmb IF mode == 'edit'; ?>
 <div class="inputrow" id="buttonrow">
 <?lsmb PROCESS button element_data = {
 	text = text("Save")
@@ -97,6 +98,17 @@ default_blank = 1
 	value = "save"
 } ?>
 </div>
+<?lsmb ELSE ?>
+<div class="inputrow" id="buttonrow">
+<?lsmb PROCESS button element_data = {
+        text = text("Save")
+        type = "submit"
+        class = "submit"
+        name = "action"
+        value = "save_new"
+} ?>
+</div>
+<?lsmb END ?>
 <?lsmb PROCESS input element_data = {
      type = "hidden"
      name = "class_id"
